--- a/index.html
+++ b/index.html
@@ -7,15 +7,147 @@ table, th, td {
 </style>
 <h1>SEIRCast</h1>
 <h2>Latest Model Predictions</h2>
-Updated as of 02/18/2021
+Updated as of 02/18/2021<br>
+<br>
+
 <table>
 <tr>
 <th>County</th><th>Fit</th><th>Effective Reproduction Number</th><th>Forecasts</th>
-</tr>
-
 <tr>
-<td>County</td><td>Fit</td><td>Effective Reproduction Number</td><td>Forecasts</td>
-</tr>
-</table>
+<td>1. Alachua</td><td></td><td></td><td></td></tr>
+<tr>
+<td>2. Baker</td><td></td><td></td><td></td></tr>
+<tr>
+<td>3. Bay</td><td></td><td></td><td></td></tr>
+<tr>
+<td>4. Bradford</td><td></td><td></td><td></td></tr>
+<tr>
+<td>5. Brevard</td><td></td><td></td><td></td></tr>
+<tr>
+<td>6. Broward</td><td></td><td></td><td></td></tr>
+<tr>
+<td>7. Calhoun</td><td></td><td></td><td></td></tr>
+<tr>
+<td>8. Charlotte</td><td></td><td></td><td></td></tr>
+<tr>
+<td>9. Citrus</td><td></td><td></td><td></td></tr>
+<tr>
+<td>10. Clay</td><td></td><td></td><td></td></tr>
+<tr>
+<td>11. Collier</td><td></td><td></td><td></td></tr>
+<tr>
+<td>12. Columbia</td><td></td><td></td><td></td></tr>
+<tr>
+<td>13. DeSoto</td><td></td><td></td><td></td></tr>
+<tr>
+<td>14. Dixie</td><td></td><td></td><td></td></tr>
+<tr>
+<td>15. Duval</td><td></td><td></td><td></td></tr>
+<tr>
+<td>16. Escambia</td><td></td><td></td><td></td></tr>
+<tr>
+<td>17. Flagler</td><td></td><td></td><td></td></tr>
+<tr>
+<td>18. Franklin</td><td></td><td></td><td></td></tr>
+<tr>
+<td>19. Gadsden</td><td></td><td></td><td></td></tr>
+<tr>
+<td>20. Gilchrist</td><td></td><td></td><td></td></tr>
+<tr>
+<td>21. Glades</td><td></td><td></td><td></td></tr>
+<tr>
+<td>22. Gulf</td><td></td><td></td><td></td></tr>
+<tr>
+<td>23. Hamilton</td><td></td><td></td><td></td></tr>
+<tr>
+<td>24. Hardee</td><td></td><td></td><td></td></tr>
+<tr>
+<td>25. Hendry</td><td></td><td></td><td></td></tr>
+<tr>
+<td>26. Hernando</td><td></td><td></td><td></td></tr>
+<tr>
+<td>27. Highlands</td><td></td><td></td><td></td></tr>
+<tr>
+<td>28. Hillsborough</td><td></td><td></td><td></td></tr>
+<tr>
+<td>29. Holmes</td><td></td><td></td><td></td></tr>
+<tr>
+<td>30. Indian River</td><td></td><td></td><td></td></tr>
+<tr>
+<td>31. Jackson</td><td></td><td></td><td></td></tr>
+<tr>
+<td>32. Jefferson</td><td></td><td></td><td></td></tr>
+<tr>
+<td>33. Lafayette</td><td></td><td></td><td></td></tr>
+<tr>
+<td>34. Lake</td><td></td><td></td><td></td></tr>
+<tr>
+<td>35. Lee</td><td></td><td></td><td></td></tr>
+<tr>
+<td>36. Leon</td><td></td><td></td><td></td></tr>
+<tr>
+<td>37. Levy</td><td></td><td></td><td></td></tr>
+<tr>
+<td>38. Liberty</td><td></td><td></td><td></td></tr>
+<tr>
+<td>39. Madison</td><td></td><td></td><td></td></tr>
+<tr>
+<td>40. Manatee</td><td></td><td></td><td></td></tr>
+<tr>
+<td>41. Marion</td><td></td><td></td><td></td></tr>
+<tr>
+<td>42. Martin</td><td></td><td></td><td></td></tr>
+<tr>
+<td>43. Miami-Dade</td><td></td><td></td><td></td></tr>
+<tr>
+<td>44. Monroe</td><td></td><td></td><td></td></tr>
+<tr>
+<td>45. Nassau</td><td></td><td></td><td></td></tr>
+<tr>
+<td>46. Okaloosa</td><td></td><td></td><td></td></tr>
+<tr>
+<td>47. Okeechobee</td><td></td><td></td><td></td></tr>
+<tr>
+<td>48. Orange</td><td></td><td></td><td></td></tr>
+<tr>
+<td>49. Osceola</td><td></td><td></td><td></td></tr>
+<tr>
+<td>50. Palm Beach</td><td></td><td></td><td></td></tr>
+<tr>
+<td>51. Pasco</td><td></td><td></td><td></td></tr>
+<tr>
+<td>52. Pinellas</td><td></td><td></td><td></td></tr>
+<tr>
+<td>53. Polk</td><td></td><td></td><td></td></tr>
+<tr>
+<td>54. Putnam</td><td></td><td></td><td></td></tr>
+<tr>
+<td>55. St. Johns</td><td></td><td></td><td></td></tr>
+<tr>
+<td>56. St. Lucie</td><td></td><td></td><td></td></tr>
+<tr>
+<td>57. Santa Rosa</td><td></td><td></td><td></td></tr>
+<tr>
+<td>58. Sarasota</td><td></td><td></td><td></td></tr>
+<tr>
+<td>59. Seminole</td><td></td><td></td><td></td></tr>
+<tr>
+<td>60. Sumter</td><td></td><td></td><td></td></tr>
+<tr>
+<td>61. Suwannee</td><td></td><td></td><td></td></tr>
+<tr>
+<td>62. Taylor</td><td></td><td></td><td></td></tr>
+<tr>
+<td>63. Union</td><td></td><td></td><td></td></tr>
+<tr>
+<td>64. Volusia</td><td></td><td></td><td></td></tr>
+<tr>
+<td>65. Wakulla</td><td></td><td></td><td></td></tr>
+<tr>
+<td>66. Walton</td><td></td><td></td><td></td></tr>
+<tr>
+<td>67. Washington</td><td></td><td></td><td></td></tr>
+
+
 
 </html>
