Added current model, latest figures.

--- a/index.html
+++ b/index.html
@@ -2,152 +2,156 @@
 <title>SEIRCast</title>
 <style>
 table, th, td {
-  border: 1px solid black;
+  border: 1.5px solid black;
 }
+td {
+  text-align: center;
+}
+
 </style>
 <h1>SEIRCast</h1>
+<h2>Current Model Structure</h2>
+<img src="current_model.png" width="844" height="462"></img>
 <h2>Latest Model Predictions</h2>
-Updated as of 02/18/2021<br>
+<strong>Updated as of 02/18/2021</strong><br>
 <br>
-
 <table>
 <tr>
-<th>County</th><th>Fit</th><th>Effective Reproduction Number</th><th>Forecasts</th>
+<th>County</th><th>Short-Term Forecasts of Daily Confirmed Cases<br>March 13th, 2021</th><th>Effective Reproduction Number</th><th>Long-Term Forecasts</th>
 <tr>
-<td>1. Alachua</td><td></td><td></td><td></td></tr>
+<td>Alachua</td><td>Median Prediction: <a href="figures/Alachua_daily_confirmed.png">65 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>2. Baker</td><td></td><td></td><td></td></tr>
+<td>Baker</td><td>Median Prediction: <a href="figures/Baker_daily_confirmed.png">20 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>3. Bay</td><td></td><td></td><td></td></tr>
+<td>Bay</td><td>Median Prediction: <a href="figures/Bay_daily_confirmed.png">248 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>4. Bradford</td><td></td><td></td><td></td></tr>
+<td>Bradford</td><td>Median Prediction: <a href="figures/Bradford_daily_confirmed.png">13 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>5. Brevard</td><td></td><td></td><td></td></tr>
+<td>Brevard</td><td>Median Prediction: <a href="figures/Brevard_daily_confirmed.png">568 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>6. Broward</td><td></td><td></td><td></td></tr>
+<td>Broward</td><td>Median Prediction: <a href="figures/Broward_daily_confirmed.png">2773 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>7. Calhoun</td><td></td><td></td><td></td></tr>
+<td>Calhoun</td><td>Median Prediction: <a href="figures/Calhoun_daily_confirmed.png">8 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>8. Charlotte</td><td></td><td></td><td></td></tr>
+<td>Charlotte</td><td>Median Prediction: <a href="figures/Charlotte_daily_confirmed.png">45 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>9. Citrus</td><td></td><td></td><td></td></tr>
+<td>Citrus</td><td>Median Prediction: <a href="figures/Citrus_daily_confirmed.png">149 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>10. Clay</td><td></td><td></td><td></td></tr>
+<td>Clay</td><td>Median Prediction: <a href="figures/Clay_daily_confirmed.png">107 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>11. Collier</td><td></td><td></td><td></td></tr>
+<td>Collier</td><td>Median Prediction: <a href="figures/Collier_daily_confirmed.png">214 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>12. Columbia</td><td></td><td></td><td></td></tr>
+<td>Columbia</td><td>Median Prediction: <a href="figures/Columbia_daily_confirmed.png">1038 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>13. DeSoto</td><td></td><td></td><td></td></tr>
+<td>DeSoto</td><td>Median Prediction: <a href="figures/DeSoto_daily_confirmed.png">54 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>14. Dixie</td><td></td><td></td><td></td></tr>
+<td>Dixie</td><td>Median Prediction: <a href="figures/Dixie_daily_confirmed.png">17 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>15. Duval</td><td></td><td></td><td></td></tr>
+<td>Duval</td><td>Median Prediction: <a href="figures/Duval_daily_confirmed.png">337 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>16. Escambia</td><td></td><td></td><td></td></tr>
+<td>Escambia</td><td>Median Prediction: <a href="figures/Escambia_daily_confirmed.png">100 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>17. Flagler</td><td></td><td></td><td></td></tr>
+<td>Flagler</td><td>Median Prediction: <a href="figures/Flagler_daily_confirmed.png">77 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>18. Franklin</td><td></td><td></td><td></td></tr>
+<td>Franklin</td><td>Median Prediction: <a href="figures/Franklin_daily_confirmed.png">4 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>19. Gadsden</td><td></td><td></td><td></td></tr>
+<td>Gadsden</td><td>Median Prediction: <a href="figures/Gadsden_daily_confirmed.png">20 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>20. Gilchrist</td><td></td><td></td><td></td></tr>
+<td>Gilchrist</td><td>Median Prediction: <a href="figures/Gilchrist_daily_confirmed.png">36 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>21. Glades</td><td></td><td></td><td></td></tr>
+<td>Glades</td><td>Median Prediction: <a href="figures/Glades_daily_confirmed.png">7 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>22. Gulf</td><td></td><td></td><td></td></tr>
+<td>Gulf</td><td>Median Prediction: <a href="figures/Gulf_daily_confirmed.png">8 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>23. Hamilton</td><td></td><td></td><td></td></tr>
+<td>Hamilton</td><td>Median Prediction: <a href="figures/Hamilton_daily_confirmed.png">14 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>24. Hardee</td><td></td><td></td><td></td></tr>
+<td>Hardee</td><td>Median Prediction: <a href="figures/Hardee_daily_confirmed.png">8 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>25. Hendry</td><td></td><td></td><td></td></tr>
+<td>Hendry</td><td>Median Prediction: <a href="figures/Hendry_daily_confirmed.png">15 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>26. Hernando</td><td></td><td></td><td></td></tr>
+<td>Hernando</td><td>Median Prediction: <a href="figures/Hernando_daily_confirmed.png">97 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>27. Highlands</td><td></td><td></td><td></td></tr>
+<td>Highlands</td><td>Median Prediction: <a href="figures/Highlands_daily_confirmed.png">48 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>28. Hillsborough</td><td></td><td></td><td></td></tr>
+<td>Hillsborough</td><td>Median Prediction: <a href="figures/Hillsborough_daily_confirmed.png">956 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>29. Holmes</td><td></td><td></td><td></td></tr>
+<td>Holmes</td><td>Median Prediction: <a href="figures/Holmes_daily_confirmed.png">17 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>30. Indian River</td><td></td><td></td><td></td></tr>
+<td>Indian River</td><td>Median Prediction: <a href="figures/Indian River_daily_confirmed.png">141 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>31. Jackson</td><td></td><td></td><td></td></tr>
+<td>Jackson</td><td>Median Prediction: <a href="figures/Jackson_daily_confirmed.png">42 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>32. Jefferson</td><td></td><td></td><td></td></tr>
+<td>Jefferson</td><td>Median Prediction: <a href="figures/Jefferson_daily_confirmed.png">14 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>33. Lafayette</td><td></td><td></td><td></td></tr>
+<td>Lafayette</td><td>Median Prediction: <a href="figures/Lafayette_daily_confirmed.png">4 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>34. Lake</td><td></td><td></td><td></td></tr>
+<td>Lake</td><td>Median Prediction: <a href="figures/Lake_daily_confirmed.png">174 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>35. Lee</td><td></td><td></td><td></td></tr>
+<td>Lee</td><td>Median Prediction: <a href="figures/Lee_daily_confirmed.png">436 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>36. Leon</td><td></td><td></td><td></td></tr>
+<td>Leon</td><td>Median Prediction: <a href="figures/Leon_daily_confirmed.png">167 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>37. Levy</td><td></td><td></td><td></td></tr>
+<td>Levy</td><td>Median Prediction: <a href="figures/Levy_daily_confirmed.png">22 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>38. Liberty</td><td></td><td></td><td></td></tr>
+<td>Liberty</td><td>Median Prediction: <a href="figures/Liberty_daily_confirmed.png">2 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>39. Madison</td><td></td><td></td><td></td></tr>
+<td>Madison</td><td>Median Prediction: <a href="figures/Madison_daily_confirmed.png">11 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>40. Manatee</td><td></td><td></td><td></td></tr>
+<td>Manatee</td><td>Median Prediction: <a href="figures/Manatee_daily_confirmed.png">334 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>41. Marion</td><td></td><td></td><td></td></tr>
+<td>Marion</td><td>Median Prediction: <a href="figures/Marion_daily_confirmed.png">206 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>42. Martin</td><td></td><td></td><td></td></tr>
+<td>Martin</td><td>Median Prediction: <a href="figures/Martin_daily_confirmed.png">155 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>43. Miami-Dade</td><td></td><td></td><td></td></tr>
+<td>Miami-Dade</td><td>Median Prediction: <a href="figures/Miami-Dade_daily_confirmed.png">2293 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>44. Monroe</td><td></td><td></td><td></td></tr>
+<td>Monroe</td><td>Median Prediction: <a href="figures/Monroe_daily_confirmed.png">75 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>45. Nassau</td><td></td><td></td><td></td></tr>
+<td>Nassau</td><td>Median Prediction: <a href="figures/Nassau_daily_confirmed.png">82 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>46. Okaloosa</td><td></td><td></td><td></td></tr>
+<td>Okaloosa</td><td>Median Prediction: <a href="figures/Okaloosa_daily_confirmed.png">347 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>47. Okeechobee</td><td></td><td></td><td></td></tr>
+<td>Okeechobee</td><td>Median Prediction: <a href="figures/Okeechobee_daily_confirmed.png">26 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>48. Orange</td><td></td><td></td><td></td></tr>
+<td>Orange</td><td>Median Prediction: <a href="figures/Orange_daily_confirmed.png">992 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>49. Osceola</td><td></td><td></td><td></td></tr>
+<td>Osceola</td><td>Median Prediction: <a href="figures/Osceola_daily_confirmed.png">337 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>50. Palm Beach</td><td></td><td></td><td></td></tr>
+<td>Palm Beach</td><td>Median Prediction: <a href="figures/Palm Beach_daily_confirmed.png">974 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>51. Pasco</td><td></td><td></td><td></td></tr>
+<td>Pasco</td><td>Median Prediction: <a href="figures/Pasco_daily_confirmed.png">490 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>52. Pinellas</td><td></td><td></td><td></td></tr>
+<td>Pinellas</td><td>Median Prediction: <a href="figures/Pinellas_daily_confirmed.png">701 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>53. Polk</td><td></td><td></td><td></td></tr>
+<td>Polk</td><td>Median Prediction: <a href="figures/Polk_daily_confirmed.png">457 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>54. Putnam</td><td></td><td></td><td></td></tr>
+<td>Putnam</td><td>Median Prediction: <a href="figures/Putnam_daily_confirmed.png">24 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>55. St. Johns</td><td></td><td></td><td></td></tr>
+<td>St. Johns</td><td>Median Prediction: <a href="figures/St. Johns_daily_confirmed.png">171 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>56. St. Lucie</td><td></td><td></td><td></td></tr>
+<td>St. Lucie</td><td>Median Prediction: <a href="figures/St. Lucie_daily_confirmed.png">193 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>57. Santa Rosa</td><td></td><td></td><td></td></tr>
+<td>Santa Rosa</td><td>Median Prediction: <a href="figures/Santa Rosa_daily_confirmed.png">79 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>58. Sarasota</td><td></td><td></td><td></td></tr>
+<td>Sarasota</td><td>Median Prediction: <a href="figures/Sarasota_daily_confirmed.png">380 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>59. Seminole</td><td></td><td></td><td></td></tr>
+<td>Seminole</td><td>Median Prediction: <a href="figures/Seminole_daily_confirmed.png">179 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>60. Sumter</td><td></td><td></td><td></td></tr>
+<td>Sumter</td><td>Median Prediction: <a href="figures/Sumter_daily_confirmed.png">91 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>61. Suwannee</td><td></td><td></td><td></td></tr>
+<td>Suwannee</td><td>Median Prediction: <a href="figures/Suwannee_daily_confirmed.png">18 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>62. Taylor</td><td></td><td></td><td></td></tr>
+<td>Taylor</td><td>Median Prediction: <a href="figures/Taylor_daily_confirmed.png">18 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>63. Union</td><td></td><td></td><td></td></tr>
+<td>Union</td><td>Median Prediction: <a href="figures/Union_daily_confirmed.png">7 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>64. Volusia</td><td></td><td></td><td></td></tr>
+<td>Volusia</td><td>Median Prediction: <a href="figures/Volusia_daily_confirmed.png">446 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>65. Wakulla</td><td></td><td></td><td></td></tr>
+<td>Wakulla</td><td>Median Prediction: <a href="figures/Wakulla_daily_confirmed.png">7 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>66. Walton</td><td></td><td></td><td></td></tr>
+<td>Walton</td><td>Median Prediction: <a href="figures/Walton_daily_confirmed.png">33 cases</a></td><td></td><td></td></tr>
 <tr>
-<td>67. Washington</td><td></td><td></td><td></td></tr>
-
-
+<td>Washington</td><td>Median Prediction: <a href="figures/Washington_daily_confirmed.png">36 cases</a></td><td></td><td></td></tr>
+</table>
 
 </html>
