--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ td {
 <body>
 <h1>SEIRCast</h1>
 <h2>Current Model Structure</h2>
-<img src="/current_model.png" width="844" height="462"></img>
+<img src="./current_model.png" width="844" height="462"></img>
 <h2>Latest Model Predictions</h2>
 <table class = "center">
 <tr>
