--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ td {
 <body>
 <h1>SEIRCast</h1>
 <h2>Current Model Structure</h2>
-<img src="/blob/master/current_model.png" width="844" height="462"></img>
+<img src="https://github.com/EdwinMichaelLab/EdwinMichaelLab.github.io/blob/d682ee016af9520e942cf17b22510e3e5104b5f3/current_model.png" width="844" height="462"></img>
 <h2>Latest Model Predictions</h2>
 <table class = "center">
 <tr>
