--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ td {
 </style>
 <body>
 <h1>SEIRCast</h1>
-See Dashboard here: <a href="https://seircast.org/">https://seircast.org</a>
+See Dashboard here: <a href="http://seircast.org/">http://seircast.org</a>
 <h2>Current Model Structure</h2>
 <img src="https://media.githubusercontent.com/media/EdwinMichaelLab/EdwinMichaelLab.github.io/master/current_model.png" width="844" height="462"></img>
 <h2>Latest Model Predictions</h2>
